examples/should_fail/index-bad-borrow2.anvil
chan ch {
    left req : (logic[2]@#2)
}


proc top(e : left ch) {
    reg r : logic[8];
    loop {
        cycle 1 >>
        let req = recv e.req >>
        cycle 2 >>
        set r[req] := 1'b1 >>
        dprint "Value = %d" (*r)
    }
}
